--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^0.27.2",
     "bootstrap-vue": "^2.22.0",
+    "dayjs": "^1.11.5",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
